[gd_scene load_steps=9 format=3 uid="uid://c2i1wyvqwowi4"]

[ext_resource type="Texture2D" uid="uid://b7f1omsoymkjj" path="res://assets/buttons/PlayButton.png" id="1_1jco3"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_6jlu4"]
[ext_resource type="Texture2D" uid="uid://cye805qgji25w" path="res://assets/background/black_hole.png" id="2_2qkpe"]
[ext_resource type="Texture2D" uid="uid://cm8seqj8wc4tj" path="res://assets/buttons/QuitButton.png" id="4_wuoru"]
[ext_resource type="Texture2D" uid="uid://i66wqje46cnu" path="res://assets/buttons/ControlsButton.png" id="5_4ek2t"]
[ext_resource type="FontFile" uid="uid://c4c7awnpvvdux" path="res://assets/fonts/quaver.ttf" id="5_hfo6y"]
[ext_resource type="Texture2D" uid="uid://cxnki5nt2d1ch" path="res://assets/buttons/InfoSquareButton.png" id="6_mui1m"]
[ext_resource type="Texture2D" uid="uid://d1uigotgv6fld" path="res://assets/buttons/QuestionmarkSquareButton.png" id="8_sesfj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_6jlu4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575, 324)
scale = Vector2(0.601042, 0.6)
texture = ExtResource("2_2qkpe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 160.0
offset_right = 1048.0
offset_bottom = 1067.0
scale = Vector2(0.45, 0.45)

[node name="PlayButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Play the game!"
texture_normal = ExtResource("1_1jco3")

[node name="ControlsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 1.2
tooltip_text = "Shows controls"
texture_normal = ExtResource("5_4ek2t")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 2.0
tooltip_text = "Quits Game"
texture_normal = ExtResource("4_wuoru")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 432.0
offset_top = 24.0
offset_right = 738.0
offset_bottom = 90.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_hfo6y")
theme_override_font_sizes/font_size = 50
text = "SPACE GAME"

[node name="LicenseButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 928.0
offset_top = 544.0
offset_right = 1128.0
offset_bottom = 744.0
scale = Vector2(0.45, 0.45)
tooltip_text = "License"
texture_normal = ExtResource("6_mui1m")

[node name="CreditsButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 1032.0
offset_top = 544.0
offset_right = 1232.0
offset_bottom = 744.0
scale = Vector2(0.45, 0.45)
size_flags_horizontal = 2
size_flags_stretch_ratio = 9.46
tooltip_text = "Credits"
texture_normal = ExtResource("8_sesfj")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LicenseButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
